[project]
name = "htb-cli"
version = "0.1.0"
description = "Unofficial CLI to query the Hack The Box API"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "k31337" }]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.0",
    "click>=8.1",
]

[project.scripts]
htb = "htb_cli.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
